---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 2;
<<<<<<< HEAD
  c2_: int = const 3;
  c3_: int = const 0;
  c4_: int = const 1;
  c5_: int = const 40;
  v6_: int = id c2_;
  v7_: int = id c3_;
  v8_: int = id c4_;
  v9_: int = id c5_;
.b10_:
  v11_: int = add v6_ v8_;
  v12_: int = add v7_ v8_;
  v13_: bool = lt v12_ v9_;
  v6_: int = id v11_;
  v7_: int = id v12_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  br v13_ .b10_ .b14_;
.b14_:
=======
>>>>>>> bd5b3865 (snapshots)
  print c1_;
  ret;
}
